[package]
edition = "2024"
name = "heater-control"
version = "0.1.0"
authors = ["Andre Braga Reis <andre@saltwing.com>"]
publish = false

[[bin]]
name = "heater-control"
path = "./src/main.rs"
test = false
bench = false
doctest = false

[dependencies]
embassy-net = { version = "0.6.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
embassy-sync = "0.6.2"
embedded-hal = "1.0.0"
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.13.0", default-features = false, features = [
    "colors",
    "critical-section",
    "esp32s3",
    "jtag-serial",      # forced instead of "auto"
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
esp-wifi = { version = "0.13.0", features = [
    "builtin-scheduler",
    "esp-alloc",
    "esp32s3",
    "wifi",
    # esp-wifi contains a lot of trace-level logging statements.
    # For maximum performance you might want to disable logging via a feature flag of the log crate.
    # "log",
] }
crc = "3.3.0"
embassy-futures = "0.1.1"
const_format = { version = "0.2.34", features = ["fmt", "rust_1_83"] }
noline = { version = "0.5.1", features = ["alloc"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
