[package]
edition = "2024"
name = "heater-control"
version = "1.0.0"
authors = ["Andre Braga Reis <andre@saltwing.com>"]
publish = false

[[bin]]
name = "heater-control"
path = "./src/main.rs"
test = false
bench = false
doctest = false

[dependencies]
critical-section = "1.2.0"
edge-http = "0.6.0"
edge-nal = "0.5.0"
edge-nal-embassy = "0.6.0"
embassy-futures = "0.1.1"
embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-sync = "0.7.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3"] }
esp-println = { version = "0.14.0", default-features = false, features = [
    "colors",
    "critical-section",
    "esp32s3",
    # Force JTAG output even if USB is not connected, otherwise it clobbers UART0.
    "jtag-serial",
] }
esp-wifi = { version = "0.14.1", features = [
    "builtin-scheduler",
    "esp-alloc",
    "esp32s3",
    "wifi",
    # esp-wifi contains a lot of trace-level logging statements.
    # For maximum performance you might want to disable logging via a feature flag of the log crate.
    # "log",
] }
crc = "3.3.0"
const_format = { version = "0.2.34", features = ["fmt", "rust_1_83"] }
noline = { version = "0.5.1", features = ["alloc"] }
esp-onewire = { git = "https://github.com/abreis/esp-onewire", tag = "v0.9.0" }
esp-ds18b20 = { git = "https://github.com/abreis/esp-ds18b20", tag = "v0.9.0" }
arrayvec = { version = "0.7.6", default-features = false, features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
thiserror = { version = "2.0.12", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
# LLVM can perform better optimizations using a single thread.
codegen-units = 1
# Amount of debug information included, reduce if low on space.
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
# opt-level 2 or 3 is required for WiFi.
# opt-level 3 codegen is sometimes bonkers.
# opt-level 's' optimized for size.
opt-level = 2
overflow-checks = false
